Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versión de API no encontrada",
     "app-preferences": "App-Einstellungen",
     "applied-tax": "angewandte Steuer",
+    "apply": "Aplicar",
     "approve": "Aprobar",
     "approve-document": "Dokument genehmigen",
     "approve-document-same-date": "Dokument zum gleichen Datum genehmigen",
@@ -687,6 +688,7 @@
     "image": "Bild",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "importieren",
     "import-accounting-plan": "Import accounting plan",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Lieferantenprodukte",
     "supplier-reference": "Lieferantenreferenz",
     "suppliers": "Lieferanten",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Zuschlag",
     "surname": "Nachnamen",
@@ -1411,6 +1414,7 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
+    "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Verwenden des APC-Caches",
     "using-filecache": "Verwenden von Filecache",
     "using-memcache": "Memcache verwenden",
+    "valid-for-day": "Válido para un día",
     "validate": "bestätigen",
     "validate-iban": "IBAN bestätigen",
     "valuation-type": "Bewertungsart",
