--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "API version not found",
     "app-preferences": "App Preferences",
     "applied-tax": "Applied tax",
+    "apply": "Apply",
     "approve": "Approve",
     "approve-document": "Approve document",
     "approve-document-same-date": "Approve document on the same date",
@@ -687,6 +688,7 @@
     "image": "Image",
     "images": "Images",
     "images-added-correctly": "%count% images added correctly",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Impacted tax subaccount",
     "import": "Import",
     "import-accounting-plan": "Import accounting plan",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Supplier products",
     "supplier-reference": "Supplier reference",
     "suppliers": "Suppliers",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Supported tax subaccount",
     "surcharge": "Surcharge",
     "surname": "Surname",
@@ -1411,6 +1414,7 @@
     "unit-profit": "Unit profit",
     "unit-purchase-price": "Unit purchase price",
     "unit-sale-price": "Unit sale price",
+    "unlimited": "Ilimitado",
     "unlink": "Unlink",
     "unlink-file": "Unlink file",
     "unlink-install-ok": "Installation cleared registry successfully.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Using APC cache",
     "using-filecache": "Using Filecache",
     "using-memcache": "Using Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "Validate",
     "validate-iban": "Validate IBAN",
     "valuation-type": "Valuation type",
