--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Ez da aurkitu API bertsioa",
     "app-preferences": "Aplikazioaren hobespenak",
     "applied-tax": "Aplikatutako zerga",
+    "apply": "Aplikatu",
     "approve": "Onartu",
     "approve-document": "Dokumentua onartu",
     "approve-document-same-date": "Data berean onartu dokumentua",
@@ -687,6 +688,7 @@
     "image": "Irudia",
     "images": "Irudiak",
     "images-added-correctly": "%count% irudi ondo gehituta",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Jasanarazitako BEZ azpikontua",
     "import": "Inportatu",
     "import-accounting-plan": "Kontabilitate plana inportatu",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Hornitzailearen produktuak",
     "supplier-reference": "Hornitzailearen erreferentzia",
     "suppliers": "Hornitzaileak",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Jasandako BEZ azpikontua",
     "surcharge": "Errekargua",
     "surname": "Abizenak",
@@ -1411,6 +1414,7 @@
     "unit-profit": "Mozkin unitarioa",
     "unit-purchase-price": "Unitateko erosketa prezioa",
     "unit-sale-price": "Unitateko salmenta prezioa",
+    "unlimited": "Ilimitado",
     "unlink": "Deskonektatu",
     "unlink-file": "Artxiboa lokabetu",
     "unlink-install-ok": "Instalazioa ondo ezabatu da erregistrotik.",
@@ -1434,6 +1438,7 @@
     "using-apc": "APC cachea erabiliz",
     "using-filecache": "Filecache erabiliz",
     "using-memcache": "Memcache erabiliz",
+    "valid-for-day": "Válido para un día",
     "validate": "Balioztatu",
     "validate-iban": "IBAN-a baieztatu",
     "valuation-type": "Balorazio mota",
