--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versión de API no encontrada",
     "app-preferences": "Préférences de l'application",
     "applied-tax": "Taxe appliquée",
+    "apply": "Appliquer",
     "approve": "Approuver",
     "approve-document": "Approuver le document",
     "approve-document-same-date": "Approuver le document de la même date",
@@ -687,6 +688,7 @@
     "image": "Image",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Sous-compte fiscal impacté",
     "import": "Importer",
     "import-accounting-plan": "Import plan comptable",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Produits du fournisseur",
     "supplier-reference": "Référence du fournisseur",
     "suppliers": "Fournisseurs",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Sous-compte de la taxe d'amont",
     "surcharge": "Surtaxe",
     "surname": "nom",
@@ -1411,6 +1414,7 @@
     "unit-profit": "Bénéfice à l'unité",
     "unit-purchase-price": "Prix d'achat à l'unité",
     "unit-sale-price": "Prix de vente à l'unité",
+    "unlimited": "Ilimitado",
     "unlink": "Rompre le lien",
     "unlink-file": "Rompre le lien du fichier",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Utilisation du cache APC",
     "using-filecache": "Utiliser Filecache",
     "using-memcache": "Utiliser Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "Valider",
     "validate-iban": "Valider IBAN",
     "valuation-type": "Type d'évaluation",
