--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versión de API no encontrada",
     "app-preferences": "Preferenze app",
     "applied-tax": "applied-tax",
+    "apply": "Applica",
     "approve": "Aprobar",
     "approve-document": "Approvare documento",
     "approve-document-same-date": "approve-document-same-date",
@@ -687,6 +688,7 @@
     "image": "Imagen",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "import",
     "import-accounting-plan": "Import accounting plan",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Prodotti del fornitore",
     "supplier-reference": "Riferimento del fornitore",
     "suppliers": "fornitori",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Sovraccarico",
     "surname": "cognomi",
@@ -1411,6 +1414,7 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
+    "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Utilizzo della cache APC",
     "using-filecache": "Utilizzando Filecache",
     "using-memcache": "Utilizzando Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "validate",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo di valutazione",
