--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versió de API no trobada",
     "app-preferences": "Preferències d'aplicació",
     "applied-tax": "Impost aplicat",
+    "apply": "Aplicar",
     "approve": "Aprovar",
     "approve-document": "Aprovar document",
     "approve-document-same-date": "Aprovar document en la mateixa data",
@@ -513,17 +514,17 @@
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
+    "es-tax-regime-cash-criteria": "Criteri de caixa",
     "es-tax-regime-especial-agp": "Règim especial de l'agricultura, la ramaderia i la pesca",
     "es-tax-regime-exempt": "Exempt",
     "es-tax-regime-general": "Règim general",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
+    "es-tax-regime-gold": "Règim especial de l'or d'inversió",
+    "es-tax-regime-group-entities": "Règim especial del grup dentitats",
     "es-tax-regime-simplified": "Règim simplificat",
     "es-tax-regime-surcharge": "Recàrrec d'equivalència",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-regime-telecom": "Règims especials aplicables als serveis de telecomunicacions, de radiodifusió o de televisió i als prestats per via electrònica",
+    "es-tax-regime-travel": "Règim especial de les agències de viatges",
+    "es-tax-regime-used-goods": "Règim especial dels béns usats, objectes d'art, antiguitats i objectes de col·lecció",
     "es_EC": "Espanyol (Ecuador)",
     "estimation": "Pressupost",
     "estimation-email-subject": "El seu pressupost %code%",
@@ -687,6 +688,7 @@
     "image": "Imatge",
     "images": "Imatges",
     "images-added-correctly": "%count% imatges afegides correctament",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subcompte d'IVA repercutit",
     "import": "Importa",
     "import-accounting-plan": "Importa pla comptable",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Productes del proveïdor",
     "supplier-reference": "Referència del proveïdor",
     "suppliers": "Proveïdors",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subcompte d'IVA suportat",
     "surcharge": "Recàrrec",
     "surname": "Cognoms",
@@ -1411,6 +1414,7 @@
     "unit-profit": "Guany unit.",
     "unit-purchase-price": "Preu compra unit.",
     "unit-sale-price": "Preu venda unit.",
+    "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "Desenllaçar arxiu",
     "unlink-install-ok": "Instal·lació esborrada del registre correctament.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Usant caché APC",
     "using-filecache": "Usant Filecache",
     "using-memcache": "Usant Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipus de valoració",
