--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versión de API no encontrada",
     "app-preferences": "Preferencias de aplicación",
     "applied-tax": "Impuesto aplicado",
+    "apply": "Aplicar",
     "approve": "Aprobar",
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento en la misma fecha",
@@ -687,6 +688,7 @@
     "image": "Imagen",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subcuenta impuesto repercutido",
     "import": "Importar",
     "import-accounting-plan": "Importar plan contable",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Productos del proveedor",
     "supplier-reference": "Referencia de proveedor",
     "suppliers": "Proveedores",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subcuenta impuesto soportado",
     "surcharge": "Recargo",
     "surname": "Apellidos",
@@ -1411,6 +1414,7 @@
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Precio compra unit.",
     "unit-sale-price": "Precio venta unit.",
+    "unlimited": "Sin límites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular archivo",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de valoración",
