--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versión da API non atopada",
     "app-preferences": "Preferencias da aplicación",
     "applied-tax": "imposto aplicado",
+    "apply": "Aplicar",
     "approve": "Aprobar",
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento na mesma data",
@@ -687,6 +688,7 @@
     "image": "Imaxe",
     "images": "Imaxes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subconta IVE repercutido",
     "import": "Importar",
     "import-accounting-plan": "Importar plan contable",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Produtos provedores",
     "supplier-reference": "Referencia do provedor",
     "suppliers": "Provedores",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subconta IVE soportado",
     "surcharge": "Recarga",
     "surname": "Apelidos",
@@ -1411,6 +1414,7 @@
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Prezo compra unit.",
     "unit-sale-price": "Prezo venta unit.",
+    "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalación borrada do rexistro corretamente.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Usando caché APC",
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de valoración",
