--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versión de API no encontrada",
     "app-preferences": "Preferências da aplicação",
     "applied-tax": "Imposto aplicado",
+    "apply": "Aplicar",
     "approve": "Aprobar",
     "approve-document": "Aprovar Documento",
     "approve-document-same-date": "Aprovar documento na mesma data",
@@ -687,6 +688,7 @@
     "image": "Imagen",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "import",
     "import-accounting-plan": "Importar Plano de Contabilidade",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Produtos de fornecedor",
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
@@ -1411,6 +1414,7 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
+    "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "validate",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de avaliação",
