--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -107,6 +107,7 @@
     "api-version-not-found": "Versió de API no trobada",
     "app-preferences": "Preferències de l'aplicació",
     "applied-tax": "Impost aplicat",
+    "apply": "Aplicar",
     "approve": "Aprovar",
     "approve-document": "Aprovar document",
     "approve-document-same-date": "Aprovar document en la mateixa data",
@@ -687,6 +688,7 @@
     "image": "Imatge",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subconte del IVA repercutit",
     "import": "import",
     "import-accounting-plan": "Importar el pla contable",
@@ -1320,6 +1322,7 @@
     "supplier-products": "Productes del proveïdor",
     "supplier-reference": "Referència del proveïdor",
     "suppliers": "Proveïdors",
+    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subconte del IVA soportat",
     "surcharge": "Recàrrec",
     "surname": "Cognoms",
@@ -1411,6 +1414,7 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
+    "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
@@ -1434,6 +1438,7 @@
     "using-apc": "Usant la caché APC",
     "using-filecache": "Usant el Filecache",
     "using-memcache": "Usant la Memcache",
+    "valid-for-day": "Válido para un día",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de valoració",
