Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "No vendre per sota del cost",
     "download": "Descarregar",
     "download-completed": "Descàrrega completada",
+    "download-xml": "Descarregar XML",
     "downloads": "Descàrregues",
     "drag": "Arrossegar",
     "dto": "Dte.",
@@ -513,7 +514,7 @@
     "es-tax-exception-e4": "Espanya: excepció per l'article 23 i 24 de la Llei de l'IVA",
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-agrarian": "Règim especial de l'agricultura, la ramaderia i la pesca",
     "es-tax-regime-cash-criteria": "Criteri de caixa",
     "es-tax-regime-especial-agp": "Règim especial de l'agricultura, la ramaderia i la pesca",
     "es-tax-regime-exempt": "Exempt",
@@ -688,7 +689,7 @@
     "image": "Imatge",
     "images": "Imatges",
     "images-added-correctly": "%count% imatges afegides correctament",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Subcompte recàrrec repercutit",
     "impacted-tax-subaccount": "Subcompte d'IVA repercutit",
     "import": "Importa",
     "import-accounting-plan": "Importa pla comptable",
@@ -711,7 +712,7 @@
     "integrity-check": "Verificació d'integritat",
     "integrity-check-help": "Aquesta és una verificació de la integritat del sistema, descrita com",
     "international-identifier": "Identificador internacional",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Intracomunitària",
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tenir entre %min% i %max% nombres o lletres, sense espais, accents, ni altres caràcters.",
     "invalid-column-lenght": "%column% ha de tenir entre %min% i %max% caràcters.",
     "invalid-date": "Data %date% no vàlida.",
@@ -1322,7 +1323,7 @@
     "supplier-products": "Productes del proveïdor",
     "supplier-reference": "Referència del proveïdor",
     "suppliers": "Proveïdors",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Subcompte recàrrec suportat",
     "supported-tax-subaccount": "Subcompte d'IVA suportat",
     "surcharge": "Recàrrec",
     "surname": "Cognoms",
@@ -1393,7 +1394,7 @@
     "transfers-stock": "Transferències d'estoc",
     "translation": "Traducció",
     "translations": "Traduccions",
-    "travel": "Viaje",
+    "travel": "Viatge",
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
     "type": "Tipus",
@@ -1414,7 +1415,7 @@
     "unit-profit": "Guany unit.",
     "unit-purchase-price": "Preu compra unit.",
     "unit-sale-price": "Preu venda unit.",
-    "unlimited": "Ilimitado",
+    "unlimited": "Il·limitat",
     "unlink": "Desvincular",
     "unlink-file": "Desenllaçar arxiu",
     "unlink-install-ok": "Instal·lació esborrada del registre correctament.",
@@ -1438,7 +1439,7 @@
     "using-apc": "Usant caché APC",
     "using-filecache": "Usant Filecache",
     "using-memcache": "Usant Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Vàlid per a un dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipus de valoració",
@@ -1481,6 +1482,7 @@
     "wizard": "Wizard",
     "wizard-p": "Empleni aquest formulari sobre el seu negoci per a acabar la configuració.",
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
+    "working-hours": "Horari de treball",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
     "y-column": "Columna Y",
