--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "Verkaufe nicht unter Kosten",
     "download": "Download",
     "download-completed": "Download beendet",
+    "download-xml": "Descargar XML",
     "downloads": "Downloads",
     "drag": "Arrastrar",
     "dto": "Scheibe.",
@@ -1481,6 +1482,7 @@
     "wizard": "Asistent",
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
+    "working-hours": "Horario de trabajo",
     "x-column": "Spalte X",
     "x-operation": "Operation X",
     "y-column": "Spalte Y",
