--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "Don't sell below cost",
     "download": "Download",
     "download-completed": "Download completed",
+    "download-xml": "Download XML",
     "downloads": "Downloads",
     "drag": "Drag",
     "dto": "Disc.",
@@ -688,7 +689,7 @@
     "image": "Image",
     "images": "Images",
     "images-added-correctly": "%count% images added correctly",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Charged surcharge subaccount",
     "impacted-tax-subaccount": "Impacted tax subaccount",
     "import": "Import",
     "import-accounting-plan": "Import accounting plan",
@@ -711,7 +712,7 @@
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
     "international-identifier": "International identifier",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Intra-community",
     "invalid-alphanumeric-code": "The alphanumeric code entered (%value%) is not valid. (%column%) must have between %min% and %max% numbers or letters, no spaces, accents or any other chraracter.",
     "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
     "invalid-date": "Invalid date %date%.",
@@ -1322,7 +1323,7 @@
     "supplier-products": "Supplier products",
     "supplier-reference": "Supplier reference",
     "suppliers": "Suppliers",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Supported surcharge subaccount",
     "supported-tax-subaccount": "Supported tax subaccount",
     "surcharge": "Surcharge",
     "surname": "Surname",
@@ -1414,7 +1415,7 @@
     "unit-profit": "Unit profit",
     "unit-purchase-price": "Unit purchase price",
     "unit-sale-price": "Unit sale price",
-    "unlimited": "Ilimitado",
+    "unlimited": "Unlimited",
     "unlink": "Unlink",
     "unlink-file": "Unlink file",
     "unlink-install-ok": "Installation cleared registry successfully.",
@@ -1438,7 +1439,7 @@
     "using-apc": "Using APC cache",
     "using-filecache": "Using Filecache",
     "using-memcache": "Using Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Valid for one day",
     "validate": "Validate",
     "validate-iban": "Validate IBAN",
     "valuation-type": "Valuation type",
@@ -1481,6 +1482,7 @@
     "wizard": "Wizard",
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
+    "working-hours": "Work schedule",
     "x-column": "X column",
     "x-operation": "X operation",
     "y-column": "Y column",
