--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "No vender por debajo de coste",
     "download": "Descargar",
     "download-completed": "Descarga completada",
+    "download-xml": "Descargar XML",
     "downloads": "Descargas",
     "drag": "Arrastrar",
     "dto": "Dto.",
@@ -1481,6 +1482,7 @@
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
+    "working-hours": "Horario de trabajo",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
     "y-column": "Columna Y",
