--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "Ez saldu kostu prezioaren azpitik",
     "download": "Deskarga",
     "download-completed": "Deskarga amaitua",
+    "download-xml": "XMLa Deskargatu",
     "downloads": "Deskargak",
     "drag": "Arrastatu",
     "dto": "Beherapena",
@@ -1481,6 +1482,7 @@
     "wizard": "Laguntzailea",
     "wizard-p": "Bete zure negozioari buruzko inprimaki hau konfigurazioa amaitzeko.",
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
+    "working-hours": "Horario de trabajo",
     "x-column": "X zutabea",
     "x-operation": "X-n eragiketa",
     "y-column": "Y zutabea",
