--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "Ne pas vendre en dessous du coût",
     "download": "télécharger",
     "download-completed": "Téléchargement terminé",
+    "download-xml": "Descargar XML",
     "downloads": "téléchargements",
     "drag": "Traînée",
     "dto": "Disque.",
@@ -1481,6 +1482,7 @@
     "wizard": "Assistant",
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
+    "working-hours": "Horario de trabajo",
     "x-column": "Colonne X",
     "x-operation": "Opération sur X",
     "y-column": "Colonne Y",
