--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "Non vender por debaixo do custo",
     "download": "descargar",
     "download-completed": "Descarga completada",
+    "download-xml": "Descargar XML",
     "downloads": "Descargas",
     "drag": "Arrastrar",
     "dto": "Dto.",
@@ -1481,6 +1482,7 @@
     "wizard": "asistente",
     "wizard-p": "Cubra este formulario sobre o seu negocio para rematar a configuración.",
     "wizard-plugins": "Un plugin é un complemento que engade novas funcionalidades. Selecciona os plugins que queras activar de inmediato, ou faino máis tarde dende o panel de control.",
+    "working-hours": "Horario de trabajo",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
     "y-column": "Columna I",
