--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "Non vendere sottocosto",
     "download": "Scarica",
     "download-completed": "download-completed",
+    "download-xml": "Descargar XML",
     "downloads": "downloads",
     "drag": "Arrastrar",
     "dto": "Disco.",
@@ -1481,6 +1482,7 @@
     "wizard": "wizard",
     "wizard-p": "wizard-p",
     "wizard-plugins": "wizard-plugins",
+    "working-hours": "Horario de trabajo",
     "x-column": "x-column",
     "x-operation": "x-operation",
     "y-column": "y-column",
