--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -452,6 +452,7 @@
     "dont-sell-below-cost": "No vendre per baix del cost",
     "download": "Descarregar",
     "download-completed": "Descàrrega finalisada",
+    "download-xml": "Descargar XML",
     "downloads": "Descàrregues",
     "drag": "Arrastrar",
     "dto": "Desconte",
@@ -1481,6 +1482,7 @@
     "wizard": "Assistent",
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
+    "working-hours": "Horario de trabajo",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
     "y-column": "Columna Y",
