- Pequeñas mejoras a la plantilla de copiar asientos. - Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Kontenplan kopieren",
     "core-update": "Kernel-Update auf Version %version%",
     "core-update-warning": "Advertencias de actualización",
+    "correct": "Correcto",
     "cost-price": "Kostenpreis",
     "cost-price-policy": "Kosten Preispolitik",
     "counterpart": "Gegenstück",
@@ -901,6 +902,7 @@
     "more-fields": "more-fields",
     "more-plugins": "more-plugins",
     "move-lines": "Mover líneas",
+    "movements": "movements",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Dieses Feld ist nur notwendig, in einigen Hostings MySQL.",
