--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Copy account plan",
     "core-update": "Core update to version %version%",
     "core-update-warning": "Update warnings",
+    "correct": "Correct",
     "cost-price": "Cost price",
     "cost-price-policy": "Cost price policy",
     "counterpart": "Counterpart",
@@ -901,6 +902,7 @@
     "more-fields": "More fields",
     "more-plugins": "More plugins...",
     "move-lines": "Move lines",
+    "movements": "Movements",
     "mysql": "MySQL",
     "mysql-socket": "MySQL Socket",
     "mysql-socket-p": "This field is only required in some MySQL hostings.",
