--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Copiar plan contable",
     "core-update": "Actualización del núcleo a la versión %version%",
     "core-update-warning": "Advertencias de actualización",
+    "correct": "Correcto",
     "cost-price": "Precio de costo",
     "cost-price-policy": "Política de precio de costo",
     "counterpart": "Contrapartida",
@@ -901,6 +902,7 @@
     "more-fields": "Más campos",
     "more-plugins": "Más plugins...",
     "move-lines": "Mover líneas",
+    "movements": "Movimientos",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo sólo es requerido en algunos hostings con MySQL.",
