--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Kontabilitate plana kopiatu",
     "core-update": "%version%. bertsiora muinaren eguneraketa",
     "core-update-warning": "Eguneraketa oharrak",
+    "correct": "Zuzena",
     "cost-price": "Kostu prezioa",
     "cost-price-policy": "Kostuen prezio politika",
     "counterpart": "Kontrakontua",
@@ -901,6 +902,7 @@
     "more-fields": "Eremu gehiago",
     "more-plugins": "Plugin gehiago...",
     "move-lines": "Lerroak mugitu",
+    "movements": "Mugimenduak",
     "mysql": "MySQL",
     "mysql-socket": "MySQL Socketa",
     "mysql-socket-p": "Eremu hau MySQL zerbitzari batzuk eskatzen dute bakarrik.",
