--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Copier le plan comptable",
     "core-update": "Mise à jour du noyau vers la version %version%",
     "core-update-warning": "Advertencias de actualización",
+    "correct": "Correcto",
     "cost-price": "Prix de revient",
     "cost-price-policy": "Politique de prix de revient",
     "counterpart": "Compensation",
@@ -901,6 +902,7 @@
     "more-fields": "Plus de champs",
     "more-plugins": "Plus de modules",
     "move-lines": "Déplacer les lignes",
+    "movements": "Mouvements",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Ce champ est uniquement nécessaire dans certains hostings MySQL.",
