--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Copiar plan contable",
     "core-update": "Actualización do núcleo á versión %version%",
     "core-update-warning": "Avisos de actualización",
+    "correct": "Correcto",
     "cost-price": "Prezo de custo",
     "cost-price-policy": "Política de actualización de prezos de custo",
     "counterpart": "Contrapartida",
@@ -901,6 +902,7 @@
     "more-fields": "Máis campos",
     "more-plugins": "Máis plugins",
     "move-lines": "Mover líneas",
+    "movements": "Movementos",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo só é necesario nalgúns hostings MySQL.",
