--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "copy-subaccounts",
     "core-update": "Aggiornamento alla versione %version%",
     "core-update-warning": "Advertencias de actualización",
+    "correct": "Correcto",
     "cost-price": "Prezzo di costo",
     "cost-price-policy": "cost-price-policy",
     "counterpart": "Offsetting",
@@ -901,6 +902,7 @@
     "more-fields": "more-fields",
     "more-plugins": "more-plugins",
     "move-lines": "Mover líneas",
+    "movements": "movements",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Questo campo è necessaria solo in alcuni hosting MySQL.",
