--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "copy-subaccounts",
     "core-update": "core-update",
     "core-update-warning": "Advertencias de actualización",
+    "correct": "Correcto",
     "cost-price": "Preço de custo",
     "cost-price-policy": "cost-price-policy",
     "counterpart": "Offsetting",
@@ -901,6 +902,7 @@
     "more-fields": "Mais campos",
     "more-plugins": "Mais plugins",
     "move-lines": "Mover líneas",
+    "movements": "movements",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo só é necessário em algumas hospedagens MySQL.",
