--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Copiar pla de comptes",
     "core-update": "Actualització del nucli a la versió %version%",
     "core-update-warning": "Advertencias de actualización",
+    "correct": "Correcto",
     "cost-price": "Preu de cost",
     "cost-price-policy": "Política de preu de cost",
     "counterpart": "Contrapartida",
@@ -901,6 +902,7 @@
     "more-fields": "Més camps",
     "more-plugins": "Més complements...",
     "move-lines": "Mover líneas",
+    "movements": "Moviments",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Aquest camp només és necessari en alguns hostings MySQL.",
