--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -302,6 +302,7 @@
     "copy-subaccounts": "Copiar pla de comptes",
     "core-update": "Actualització del nucli a la versió %version%",
     "core-update-warning": "Advertiments d'actualització",
+    "correct": "Correcte",
     "cost-price": "Preu de cost",
     "cost-price-policy": "Política de preu de cost",
     "counterpart": "Contrapartida",
@@ -901,6 +902,7 @@
     "more-fields": "Mes camps",
     "more-plugins": "Més plugins...",
     "move-lines": "Moure línies",
+    "movements": "moviments",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Aquest camp només és necessari en alguns hostings MySQL.",
